--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.4",
     "mongoose": "^6.0.12",
+    "multer": "^1.4.3",
     "nodemon": "^2.0.15"
   }
 }
