--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^4.1.4",
     "mongoose": "^6.0.12",
     "multer": "^1.4.3",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "sharp": "^0.29.3"
   }
 }
