--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "",
+  "name": "task-manager-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "env-cmd -f ./src/config/dev.env nodemon src/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,7 +17,10 @@
     "mongodb": "^4.1.4",
     "mongoose": "^6.0.12",
     "multer": "^1.4.3",
-    "nodemon": "^2.0.15",
     "sharp": "^0.29.3"
+  },
+  "devDependencies": {
+    "env-cmd": "^10.1.0",
+    "nodemon": "^2.0.15"
   }
 }
