--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node src/index.js",
     "dev": "env-cmd -f ./src/config/dev.env nodemon src/index.js"
   },
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
+    "jest": "^27.3.1",
     "nodemon": "^2.0.15"
   }
 }
