--- a/src/config/dev.env
+++ b/src/config/dev.env
@@ -1,3 +1,3 @@
 PORT=3000
-DATABASE_URL=mongodb+srv://new-user31:1GC8s3X93rBF0Ifa@cluster0.rltnc.mongodb.net/task-manager-db?retryWrites=true&w=majority
+DATABASE_URL=mongodb+srv://new-user31:8dRRXXr2YmUaimyW@cluster0.rltnc.mongodb.net/taskManagerApp?retryWrites=true&w=majority
 JWT_SECRET=secret
